--- a/RSABomber.csproj
+++ b/RSABomber.csproj
@@ -56,21 +56,30 @@
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Station.cs" />
     <Compile Include="Classes\Wall.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="InGameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="InGameForm.Designer.cs">
+      <DependentUpon>InGameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="Classes\IGameObject.cs" />
     <Compile Include="Handler.cs" />
     <Compile Include="MapLoader.cs" />
     <Compile Include="Menu.cs" />
+    <Compile Include="MenuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuForm.Designer.cs">
+      <DependentUpon>MenuForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="InGameForm.resx">
+      <DependentUpon>InGameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuForm.resx">
+      <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
