--- a/RSABomber.csproj
+++ b/RSABomber.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B47083C0-B28D-40EB-90B8-7D7FA2C78E63}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>RSABomber</RootNamespace>
     <AssemblyName>RSABomber</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
