--- a/RSABomber.csproj
+++ b/RSABomber.csproj
@@ -111,18 +111,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\Bomber.png" />
-    <Content Include="Images\Digger1.png" />
-    <Content Include="Images\Gold.png" />
-    <Content Include="Images\Gold1.png" />
-    <Content Include="Images\Monster.png" />
-    <Content Include="Images\nelson.png" />
-    <Content Include="Images\Sack.png" />
-    <Content Include="Images\Terrain.png" />
-    <Content Include="Images\wall.png" />
+    <Content Include="Images\bomb.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\nelson.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\station.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\wall.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Maps\1.map.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Maps\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
